<resources>
    <string name="app_name">kuis belum jadi</string>
    <string name="Berita">Hot News</string>
    <string name="Hotline">Belajar Membuat Aplikasi</string>
    <string name="berita1">Jakarta, CNN Indonesia -- Kemenangan Khabib Nurmagomedov atas Conor McGregormerupakan kemenangan yang fenomenal dan hal itu membuat Khabib disambut oleh suporternya di stadion sepak bola.\n\nTingginya antusiasme suporter Khabib untuk menyambut kepulangan sang pahlawan membuat acara penyambutan harus dilakukan di tempat yang lebih luas.\n\n</string>
    <string name="berita2">Jakarta - Timnas Indonesia U-23 memulai kiprah di Asian Games 2018 dengan kemenangan. Untuk sementara timnas U-23 menempati posisi kedua klasemen sepakbola Asian Games.\n\nTiga poin disabet Timnas U-23 ketika berhadapan dengan Taiwan di Stadion Patriot Bekasi, Minggu (12/8/2018) malam WIB. Skuat Indonesia besutan Luis Milla menang 4-0.\n</string>
    <string name="next1">Selengkapnya >>></string>
    <string name="next2">Selengkapnya >>></string>
    <string name="JudulBeritaa">HOT NEWS</string>
    <string name="JudulBeritab">Asian Games Indonesia</string>
    <string name="Isiberitab">Jakarta - Timnas Indonesia U-23 memulai kiprah di Asian Games 2018 dengan kemenangan. Untuk sementara timnas U-23 menempati posisi kedua klasemen sepakbola Asian Games.\n\nTiga poin disabet Timnas U-23 ketika berhadapan dengan Taiwan di Stadion Patriot Bekasi, Minggu (12/8/2018) malam WIB. Skuat Indonesia besutan Luis Milla menang 4-0.\n\nPencapaian tersebut membuat Indonesia kini menempati posisi kedua klasemen sepakbola Asian Games 2018 di Grup A, cuma kalah dari Palestina yang punya 4 poin setelah menjalani dua pertandingan.\n\n\nPosisi ketiga klasemen sepakbola Asian Games 2018 di Grup A saat ini ditempati oleh Hong Kong yang juga punya 3 poin setelah memulai dengan kemenangan 3-1 atas Laos. Di Grup A, cuma Indonesia dan Hong Kong yang baru main satu kali.\n\nTimnas Indonesia U-23 akan menjalani pertandingan keduanya di Asian Games 2018 dengan menghadapi Palestina di Stadion Patriot Bekasi, Rabu (15/8).\n</string>
    <string name="isiberitakhabib">Jakarta, CNN Indonesia -- Kemenangan Khabib Nurmagomedov atas Conor McGregormerupakan kemenangan yang fenomenal dan hal itu membuat Khabib disambut oleh suporternya di stadion sepak bola.  Tingginya antusiasme suporter Khabib untuk menyambut kepulangan sang pahlawan membuat acara penyambutan harus dilakukan di tempat yang lebih luas.</string>
    <string name="beritakhabib1">Jakarta, CNN Indonesia -- Kemenangan Khabib Nurmagomedov atas Conor McGregormerupakan kemenangan yang fenomenal dan hal itu membuat Khabib disambut oleh suporternya di stadion sepak bola.  Tingginya antusiasme suporter Khabib untuk menyambut kepulangan sang pahlawan membuat acara penyambutan harus dilakukan di tempat yang lebih luas.   Khabib kemudian disambut di Stadion Anzhi Arena, Dagestan, markas klub Anzhi Makhachkala pada Senin (8/10) waktu setempat. Pada stadion berkapasitas 26.500 tersebut, sekitar 10 ribu orang berkumpul untuk melihat Khabib. Di tengah lapangan, panitia mendirikan panggung untuk Khabib dan tribun di belakang panggung memang sengaja dikosongkan.  Khabib lalu memberikan pidato sambutan yang disambut meriah oleh para penggemarnya.  \"Saya ingin menunjukkan kepadanya (McGregor), perbedaan dari orang-orang kita dengan orang-orang mereka. Kita tahu sejarah kita, leluhur kita, dan apa yang telah bangsa ini lalui. Tidak ada yang bisa merusak itu,\" tutur Khabib seperti dikutip dari RT, yang disambut meriah oleh penonton.</string>
    <string name="IsiBeritaa">"Jakarta, CNN Indonesia -- Kemenangan Khabib Nurmagomedov atas Conor McGregormerupakan kemenangan yang fenomenal dan hal itu membuat Khabib disambut oleh suporternya di stadion sepak bola.  Tingginya antusiasme suporter Khabib untuk menyambut kepulangan sang pahlawan membuat acara penyambutan harus dilakukan di tempat yang lebih luas.   Khabib kemudian disambut di Stadion Anzhi Arena, Dagestan, markas klub Anzhi Makhachkala pada Senin (8/10) waktu setempat. Pada stadion berkapasitas 26.500 tersebut, sekitar 10 ribu orang berkumpul untuk melihat Khabib. Di tengah lapangan, panitia mendirikan panggung untuk Khabib dan tribun di belakang panggung memang sengaja dikosongkan.  Khabib lalu memberikan pidato sambutan yang disambut meriah oleh para penggemarnya.  \"Saya ingin menunjukkan kepadanya (McGregor), perbedaan dari orang-orang kita dengan orang-orang mereka. Kita tahu sejarah kita, leluhur kita, dan apa yang telah bangsa ini lalui. Tidak ada yang bisa merusak itu,\" tutur Khabib seperti dikutip dari RT, yang disambut meriah oleh penonton. "</string>
</resources>
